--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   db:
     restart: always
     image: postgres:alpine
-### Uncomment to enable DB persistance
-#    volumes:
-#      - ./postgres:/var/lib/postgresql/data
+## Uncomment to enable DB persistance
+    volumes:
+      - /data/postgres:/var/lib/postgresql/data
 
   redis:
     restart: always
     image: redis:alpine
-### Uncomment to enable REDIS persistance
-#    volumes:
-#      - ./redis:/data
+## Uncomment to enable REDIS persistance
+    volumes:
+      - /data/redis:/data
 
   web:
     build: .
